# mcp-weather-app

./: README.md  pyproject.toml
src/: server.py
src/client/: client_fast.py
