[project]
name = "mcp-app-calculator"
version = "0.1.0"
description = "A calculator MCP app"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.1.1",
    "mcp>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
