[project]
name = "mcp-weather-app"
version = "0.1.0"
description = "MCP server exposing weather and forecast tools via FastMCP (wttr.in)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.1.1",
    "httpx>=0.27.0",
    "mcp>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
